Updated template for python 3.4

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,34 @@
-Flask-Celery-Helper>=0.2.2
-Flask-Mail>=0.9.0
-Flask-Redis-Helper>=0.1.2
-Flask-SQLAlchemy>=1.0
-Flask-Script>=2.0.5
-Flask-Statics-Helper>=0.3.0
-Flask>=0.10.1
-MySQL-python>=1.2.3
-PyYAML>=3.11
-docopt>=0.6.1
-requests>=2.3.0
-six>=1.7.3
-tornado>=4.0
+amqp==2.1.4
+backports-abc==0.5
+billiard==3.5.0.2
+blinker==1.4
+celery==4.0.2
+certifi==2017.4.17
+chardet==3.0.4
+click==6.7
+docopt==0.6.2
+Flask==0.12.2
+Flask-Celery-Helper==1.1.0
+Flask-Mail==0.9.1
+Flask-Redis-Helper==1.0.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.2
+Flask-Statics-Helper==1.0.0
+idna==2.5
+itsdangerous==0.24
+Jinja2==2.9.6
+kombu==4.0.2
+MarkupSafe==1.0
+py==1.4.34
+PyMySQL==0.7.11
+pytest==3.1.2
+pytz==2017.2
+PyYAML==3.12
+redis==2.10.5
+requests==2.18.1
+six==1.10.0
+SQLAlchemy==1.1.10
+tornado==4.5.1
+urllib3==1.21.1
+vine==1.1.3
+Werkzeug==0.12.2
